# intercom

./: .gitignore
apple/: build-xcframework.sh
apple/IntercomApp.xcodeproj/: project.pbxproj
apple/IntercomApp/Shared/: IntercomApp.swift  IntercomManager.swift
apple/IntercomApp/Shared/Views/: ChannelListView.swift  DeviceSettingsView.swift  TalkButtonView.swift  UserListView.swift
apple/IntercomApp/iOS/: ContentView.swift
apple/IntercomApp/iOS/Resources/: Info.plist
apple/IntercomApp/macOS/: MainWindow.swift
apple/IntercomApp/macOS/Resources/: Info.plist
docs/: ARCHITECTURE.md  BUILD.md
firebase/: database.rules.json
rust/: Cargo.toml
rust/crates/intercom-audio/: Cargo.toml
rust/crates/intercom-audio/src/: cpal_backend.rs  device.rs  handle.rs  lib.rs  resampler.rs  vad.rs
rust/crates/intercom-codec/: Cargo.toml
rust/crates/intercom-codec/src/: lib.rs  opus.rs
rust/crates/intercom-core/: Cargo.toml
rust/crates/intercom-core/src/: client.rs  config.rs  events.rs  lib.rs  server.rs
rust/crates/intercom-crypto/: Cargo.toml
rust/crates/intercom-crypto/src/: lib.rs
rust/crates/intercom-ffi/: Cargo.toml  build.rs
rust/crates/intercom-ffi/src/: intercom.udl  lib.rs
rust/crates/intercom-mixer/: Cargo.toml
rust/crates/intercom-mixer/src/: channel_mixer.rs  jitter_buffer.rs  lib.rs
rust/crates/intercom-protocol/: Cargo.toml
rust/crates/intercom-protocol/src/: lib.rs  messages.rs
rust/crates/intercom-session/: Cargo.toml
rust/crates/intercom-session/src/: lib.rs
rust/crates/intercom-signaling/: Cargo.toml
rust/crates/intercom-signaling/src/: firebase.rs  lib.rs
rust/crates/intercom-transport/: Cargo.toml
rust/crates/intercom-transport/src/: lib.rs  webrtc.rs
windows/IntercomApp/: CMakeLists.txt
windows/IntercomApp/src/: ChannelListWidget.cpp  ChannelListWidget.h  ConnectDialog.cpp  ConnectDialog.h  DeviceSettingsDialog.cpp  DeviceSettingsDialog.h  IntercomClient.cpp  IntercomClient.h  MainWindow.cpp  MainWindow.h  TalkButtonWidget.cpp  TalkButtonWidget.h  UserListWidget.cpp  UserListWidget.h  main.cpp
