[package]
name = "intercom-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FFI bindings for the intercom system"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "intercom_ffi"

[dependencies]
uniffi = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
thiserror = { workspace = true }

intercom-core = { workspace = true }
intercom-protocol = { workspace = true }
intercom-audio = { workspace = true }
intercom-signaling = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
