[package]
name = "intercom-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FFI bindings for the intercom system"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "intercom_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["cli"]

[dependencies]
uniffi = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
thiserror = { workspace = true }

intercom-core = { workspace = true }
intercom-protocol = { workspace = true }
intercom-audio = { workspace = true }
intercom-signaling = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }

[features]
default = []
cli = ["uniffi/cli", "uniffi/bindgen"]
