[package]
name = "intercom-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Protocol message types for the intercom system"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
