[package]
name = "intercom-session"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Session and user state management for the intercom system"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
intercom-protocol = { workspace = true }
