[package]
name = "intercom-signaling"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Firebase signaling client for WebRTC connection establishment"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
intercom-protocol = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
