[package]
name = "intercom-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebRTC transport layer for the intercom system"

[dependencies]
webrtc = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
intercom-protocol = { workspace = true }
bytes = "1.11.1"

[dev-dependencies]
tokio-test = "0.4"
